--- a/my-next-app/package.json
+++ b/my-next-app/package.json
@@ -13,7 +13,8 @@
     "env": "^0.0.2",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "typescript": "^5",
